--- a/AsyncInn/AsyncInn/AsyncInn.csproj
+++ b/AsyncInn/AsyncInn/AsyncInn.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.2.1" />
-    <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.1">
       <PrivateAssets>all</PrivateAssets>
